# kafka-rust-example

./: Cargo.toml  README.md  docker-compose.yml
src/: api.rs  consumer.rs  main.rs  models.rs  producer.rs
