[package]
name = "kafka-rust-example"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.37.0", features = [] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
env_logger = "0.11.8"
log = "0.4.27"
actix-web = "4.11.0"